--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://meik2333.com/"
+baseURL = "https://isalman.dev/"
 languageCode = "zh-cn"
 title = "Salman's blog"
 theme = "github-style"
